examples/test/testpolicy15421.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15421
  namespace: namespace221
spec:
  podSelector:
    matchLabels:
      key35: value47
      key33: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value9
          key14: value30
          key37: value25
      podSelector:
        matchLabels:
          key30: value15
          key42: value13
